# ai-agent-studio-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: dependencies.py  main.py
app/agents/: __init__.py  config.py  factory.py  platform.py  registry.py  state.py
app/agents/configs/: __init__.py  defaults.py
app/agents/routing/: __init__.py  router.py
app/api/routes/: __init__.py  (+2 more)
app/core/: config.py  logging.py  security.py
app/db/: indexes.py  migrations.py  mongo.py  mongodb.py  template_seed.py  unit_of_work.py
app/factories/: service_factory.py
app/graph/: builder.py  state.py
app/models/: agent.py  base.py  chat.py  knowledge.py  knowledge_extraction_job.py  lead.py  memory.py  message.py  staff.py  template.py  user.py
app/repositories/: agent_repository.py  base.py  chat_repository.py  knowledge_extraction_job_repository.py  knowledge_repository.py  lead_repository.py  memory_repository.py  message_repository.py  staff_repository.py  template_repository.py  user_repository.py
app/schemas/: agent.py  auth.py  chat.py  common.py  knowledge.py  lead.py  memory.py  overview.py  staff.py  template.py
app/services/: agent_response_prompt.py  agent_service.py  auth_service.py  chat_service.py  email_service.py  knowledge_service.py  lead_service.py  llm_service.py  memory_service.py  multi_chat_service.py  overview_service.py  router_service.py  staff_service.py  template_service.py
app/tools/: __init__.py  base.py  builtin.py  registry.py
app/utils/: __init__.py  ids.py  time.py
(+20 files in other folders)
